# RobotExploradorDeEmergencias

./: CajaArduino.dwg  Dibujo11.bak  Dibujo2.stl  Dibujo5.stl  Dibujo6.stl  Estantes.dwg  README.md
3D/: Dibujo1.dwg  Dibujo1.stl  Dibujo11.dwg  Dibujo3.stl  Dibujo4.stl  Joystick.bak  Joystick.dwg
Nodo_central/src/Otros/Raspberry/: si7021.py
Nodo_central/src/navegacion/: CHANGELOG.rst  CMakeLists.txt
Nodo_central/src/navegacion/launch/: slam.launch.py
Nodo_central/src/robotexploradordeemergencias/launch/: Transformada.py
Raspberry/: Camara.py  Lanzador.py  startup.sh
nodo_central/Otros/: Audio.py  flows.json
nodo_central/Otros/Raspberry/: CCS811.py  Camara.py  Lanzador.py  RSSI.py  Servo.py
nodo_central/navegacion/: package.xml
nodo_central/navegacion/launch/: localization.launch.py
nodo_central/robotexploradordeemergencias/: CMakeLists.txt
nodo_central/robotexploradordeemergencias/launch/: .csv  Audio.py  Joystick.py  Robot.py  Sirena.py
src/irobot/irobot_create_common_bringup/launch/: rviz2_1.launch.py  rviz2_2.launch.py
src/irobot/irobot_create_common_bringup/rviz/: irobot_create_view.rviz  irobot_create_view1.rviz  irobot_create_view2.rviz
src/navegacion/config/: slam.yaml
src/navegacion/launch/: nav2.launch.py
src/robotexploradordeemergencias/: package.xml
src/robotexploradordeemergencias/launch/: Camara.py  Luces.py  Microfono.py  ModoDeNavegacion.py  MoviminetoAcople_Desacople.py  Puente.py  robotexploradordeemergencias.launch.py
